updated opf with annotation transfer

--- a/51d35b09179e4cf885b6e7b5b18df55d.opf/meta.yml
+++ b/51d35b09179e4cf885b6e7b5b18df55d.opf/meta.yml
@@ -5,6 +5,6 @@ source_metadata:
     f89be305a6754b06b1a4cf271e1ccac6:
       base_file: v110.txt
       image_group_id: I1PD95956
-      title: ''
+      title: སློབ་དཔོན་ཀླུ་སྒྲུབ་ཀྱིས་བཤད་པ་སྨན་ཨ་བའི་ཆོ་ག།
       total_pages: 1182
       volume_number: 111
